# docs/swagger.yaml
@@ -64,6 +64,7 @@ definitions:
         type: integer
     type: object
   kvant_task_internal_services.RegisterRequest:
+    description: Данные для создания нового пользователя
     properties:
       age:
         type: integer
@@ -132,19 +133,19 @@ paths:
       - application/json
       responses:
         "200":
-          description: OK
+          description: Успешная аутентификация
           schema:
             $ref: '#/definitions/kvant_task_internal_services.TokenResponse'
         "400":
-          description: Bad Request
+          description: Некорректные данные для входа
           schema:
             $ref: '#/definitions/internal_handlers.ErrorResponse'
         "401":
-          description: Unauthorized
+          description: Неверный email или пароль
           schema:
             $ref: '#/definitions/internal_handlers.ErrorResponse'
         "422":
-          description: Unprocessable Entity
+          description: Ошибка валидации данных
           schema:
             $ref: '#/definitions/internal_handlers.ValidationErrorResponse'
       summary: Аутентификация
@@ -176,15 +177,15 @@ paths:
       - application/json
       responses:
         "200":
-          description: OK
+          description: Список пользователей
           schema:
             $ref: '#/definitions/internal_handlers.UserListResponse'
         "401":
-          description: Unauthorized
+          description: Неавторизованный доступ
           schema:
             $ref: '#/definitions/internal_handlers.ErrorResponse'
         "500":
-          description: Internal Server Error
+          description: Внутренняя ошибка сервера
           schema:
             $ref: '#/definitions/internal_handlers.ErrorResponse'
       security:
@@ -207,19 +208,19 @@ paths:
       - application/json
       responses:
         "201":
-          description: Created
+          description: Пользователь успешно создан
           schema:
             $ref: '#/definitions/kvant_task_internal_services.UserResponse'
         "400":
-          description: Bad Request
+          description: Пользователь с таким email уже существует
           schema:
             $ref: '#/definitions/internal_handlers.ErrorResponse'
         "422":
-          description: Unprocessable Entity
+          description: Ошибка валидации данных
           schema:
             $ref: '#/definitions/internal_handlers.ValidationErrorResponse'
         "500":
-          description: Internal Server Error
+          description: Внутренняя ошибка сервера
           schema:
             $ref: '#/definitions/internal_handlers.ErrorResponse'
       summary: Создать пользователя
@@ -355,21 +356,17 @@ paths:
       - application/json
       responses:
         "200":
-          description: OK
+          description: Список заказов
           schema:
             items:
               $ref: '#/definitions/kvant_task_internal_services.OrderResponse'
             type: array
         "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/internal_handlers.ErrorResponse'
-        "401":
-          description: Unauthorized
+          description: Некорректный ID пользователя
           schema:
             $ref: '#/definitions/internal_handlers.ErrorResponse'
         "500":
-          description: Internal Server Error
+          description: Внутренняя ошибка сервера
           schema:
             $ref: '#/definitions/internal_handlers.ErrorResponse'
       security:
@@ -397,23 +394,19 @@ paths:
       - application/json
       responses:
         "201":
-          description: Created
+          description: Заказ успешно создан
           schema:
             $ref: '#/definitions/kvant_task_internal_services.OrderResponse'
         "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/internal_handlers.ErrorResponse'
-        "401":
-          description: Unauthorized
+          description: Некорректный ID пользователя
           schema:
             $ref: '#/definitions/internal_handlers.ErrorResponse'
         "422":
-          description: Unprocessable Entity
+          description: Ошибка валидации данных заказа
           schema:
             $ref: '#/definitions/internal_handlers.ValidationErrorResponse'
         "500":
-          description: Internal Server Error
+          description: Внутренняя ошибка сервера
           schema:
             $ref: '#/definitions/internal_handlers.ErrorResponse'
       security:
